[package]
name = "temp_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["cargo"] }
paste = "1.0.6"

[dev-dependencies]
float-cmp = "0.9.0"
quickcheck = "1.0.3"
